minor fix to menu

--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
     </head>
     <body>
 	<div class="fixed-float-nav">
-	    <div class="menu flex-col align-right">
-		<div class="submenu flex-col">
-		    <div class="menu-item flex-col align-center"><a href="#sec-top">Personal Information</a></div>
-		    <div class="menu-item flex-col align-center"><a href="#sec-teaching">Teaching & Seminars</a></div>
-		    <div class="menu-item flex-col align-center"><a href="#sec-research">Research & Publication</a></div>
-		    <div class="menu-item flex-col align-center"><a href="#sec-talks">Talks</a></div>
-		    <div class="menu-item flex-col align-center"><a href="#sec-conferences">Conferences</a></div>
-		    <div class="menu-item flex-col align-center"><a href="#sec-employment">Employment & Education</a></div>
+	    <div class="menu overlay-container large-icon">
+		<div class="submenu overlay-item">
+		    <div class="submenu-up">
+			<div class="menu-item flex-col align-center"><a href="#sec-top">Personal Information</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-teaching">Teaching & Seminars</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-research">Research & Publication</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-talks">Talks</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-conferences">Conferences</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-employment">Employment & Education</a></div>
+		    </div>
 		</div>
-		<div class="overlay-container large-icon flex-col align-center">
-		    <div class="button1 overlay-item ui-button flex-col center-center">
+		<div class="overlay-item button1 flex-col">
+		    <div class="ui-button fill-up flex-col center-center">
 			<i class="fa fa-plus fa-lg fa-fw" aria-hidden="true" aria-label="open menu"></i>
 		    </div>
-		    <div class="button2 overlay-item ui-button flex-col center-center">
+		</div>
+		<div class="overlay-item button2 flex-col">
+		    <div class="ui-button fill-up flex-col center-center">
 			<i class="fa fa-minus fa-lg fa-fw" aria-hidden="true" aria-label="collapse menu"></i>
 		    </div>
 		</div>
@@ -94,120 +98,120 @@
 		    correspondence, <var>L</var>-functions, endoscopy,
 		    periods and Abelian varieties.<br/>
 		    
-		<h2 id="sec-publication">Publication and Preprints</h2>
-		<ol class="biblio">
-		    <li class="biblio">A Critical Case of Rallis Inner Product Formula.  Sci. China Math. 60 (2017), no. 2, 201–222. <a href="https://arxiv.org/abs/1603.04123">arXiv:1603.04123</a>.</li>
-		    <li class="biblio">Periods and (<var>χ</var>, <var>b</var>)-Factors of Cuspidal Automorphic Forms of Symplectic Groups. With Dihua Jiang (江迪华). Accepted by Israel Journal of Mathematics. Preprint. <a href="https://arxiv.org/abs/1507.03297">arXiv:1507.03297</a>, 2015.
-		    </li>
-		    <li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups II. With Dihua Jiang (江迪华). Preprint.</li>
-		    <li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups I. With Dihua Jiang (江迪华).  J. Number Theory 161 (2016), 88–118. <a href="https://arxiv.org/abs/1409.0767">arXiv:1409.0767</a>.</li>
-		    <li class="biblio">Irreducibility of Theta Lifting for Unitary Groups. J. Number Theory, 133(10):3296–3318, 2013.  	<a href="https://arxiv.org/abs/1409.0770">arXiv:1409.0770</a>.</li>
-		    <li class="biblio">
-			<var>F</var>-virtual Abelian Varieties of GL<sub>2</sub>-type. <a href=
-											  "https://arxiv.org/abs/1507.03069">arXiv:1507.03069</a>, 2015.
-		    </li>
-		    <li class="biblio">Classification of Small Covers over Prisms up to Equivariant Cobordism. Adv. Math. (China),
-			37(5):584–590, 2008.</li>
-		</ol>
+		    <h2 id="sec-publication">Publication and Preprints</h2>
+		    <ol class="biblio">
+			<li class="biblio">A Critical Case of Rallis Inner Product Formula.  Sci. China Math. 60 (2017), no. 2, 201–222. <a href="https://arxiv.org/abs/1603.04123">arXiv:1603.04123</a>.</li>
+			<li class="biblio">Periods and (<var>χ</var>, <var>b</var>)-Factors of Cuspidal Automorphic Forms of Symplectic Groups. With Dihua Jiang (江迪华). Accepted by Israel Journal of Mathematics. Preprint. <a href="https://arxiv.org/abs/1507.03297">arXiv:1507.03297</a>, 2015.
+			</li>
+			<li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups II. With Dihua Jiang (江迪华). Preprint.</li>
+			<li class="biblio">On (<var>χ</var>, <var>b</var>)-factors of Cuspidal Automorphic Representations of Unitary Groups I. With Dihua Jiang (江迪华).  J. Number Theory 161 (2016), 88–118. <a href="https://arxiv.org/abs/1409.0767">arXiv:1409.0767</a>.</li>
+			<li class="biblio">Irreducibility of Theta Lifting for Unitary Groups. J. Number Theory, 133(10):3296–3318, 2013.  	<a href="https://arxiv.org/abs/1409.0770">arXiv:1409.0770</a>.</li>
+			<li class="biblio">
+			    <var>F</var>-virtual Abelian Varieties of GL<sub>2</sub>-type. <a href=
+											      "https://arxiv.org/abs/1507.03069">arXiv:1507.03069</a>, 2015.
+			</li>
+			<li class="biblio">Classification of Small Covers over Prisms up to Equivariant Cobordism. Adv. Math. (China),
+			    37(5):584–590, 2008.</li>
+		    </ol>
 
-		<h2 id="sec-talks">Talks</h2>
-		<ul>
-		    <li>Period Integrals, <var>L</var>-functions
-			and (<var>χ</var>, <var>b</var>)-theory,
-			Hunan University,
-			Changsha, China, May TBA, 2017
-		    </li>
-		    <li>Period Integrals, <var>L</var>-functions
-			and (<var>χ</var>, <var>b</var>)-theory,
-			National University of Singapore,
-			Singapore, Apr. 16 - 22, 2017
-		    </li>
-		    <li>Period Integrals, <var>L</var>-functions
-			and (<var>χ</var>, <var>b</var>)-theory,
-			Xiamen University,
-			Xiamen, China, Mar. 7 - 10, 2017
-		    </li>
-		    <li>Theta Correspondence, Periods
-			and (<var>χ</var>, <var>b</var>)-theory, Zhejiang University,
-			Hangzhou, China, Sept. 11, 2016
-		    </li>
-		    <li>Periods
-			and (<var>χ</var>, <var>b</var>)-theory, Taida Institute for
-			Mathematical Sciences, Taipei, China, Aug. 2, 2016
-		    </li>
-		    <li>Weil Conjectures for Abelian Varieties, Taida Institute for
-			Mathematical Sciences, Taipei, China, July 19 and July 26, 2016</li>
-		    <li>Involutive Property of Theta Correspondence, Shanghai Center for
-			Mathematical Sciences, Shanghai, China, April. 1, 2016</li>
-		    <li>Theta correspondence, periods and Arthur Parameters, Conference on
-			Eisenstein Series on Kac-Moody Groups and Applications to Physics at
-			KIAS, Seoul, South Korea, Nov. 16, 2015</li>
-		    <li>Local Jacquet-Langlands Correspondence, Shanghai Center for
-			Mathematical Sciences, Shanghai, China, Sept. 22, 2015</li>
-		    <li>Theta correspondence, periods
-			and <var>L</var>-functions, Morningside Center
-			of Mathematics, Beijing, China, July 17 and July 19, 2015</li>
-		    <li>Theta correspondence, periods and Arthur Parameters, University of
-			Missouri, Columbia, MO, USA, Apr. 21, 2015</li>
-		    <li>Theta correspondence, periods
-			and <var>L</var>-functions, Part III,
-			University of Minnesota, Minneapolis, MN, USA, Feb. 27, 2015</li>
-		    <li>Theta correspondence, periods
-			and <var>L</var>-functions, Part II,
-			University of Minnesota, Minneapolis, MN, USA, Feb. 13, 2015</li>
-		    <li>Theta correspondence, periods
-			and <var>L</var>-functions, Part I, University
-			of Minnesota, Minneapolis, MN, USA, Feb. 6, 2015</li>
-		    <li>Some applications of the Arthur trucation method, University of
-			Minnesota, Minneapolis, MN, USA, Nov. 14, 2014</li>
-		    <li>Periods
-			and (<var>χ</var>, <var>b</var>)-factors
-			of cuspidal automorphic forms of symplectic groups, University of
-			Minnesota, Minneapolis, MN, USA, Nov. 7, 2014</li>
-		    <li>On Gan-Gross-Prasad Conjecture, University of Minnesota, Minneapolis, MN, USA, Nov. 1
-			and Nov. 8, 2013</li>
-		    <li>Virtual Abelian Varieties
-			of GL<sub>2</sub>-type,
-			Max-Planck-Institut für Mathematik, Bonn, Germany, Dec. 6, 2012</li>
-		    <li>Rallis Inner Product Formula, University of Wisconsin-Madison, Madison, WI, USA,
-			Apr. 12 2012</li>
-		    <li>Theta correspondence for unitary groups, University of Minnesota, Minneapolis, MN, USA, 
-			Jan. 27, Feb. 3, Mar. 2 and Mar. 23, 2012</li>
-		    <li>Rallis Inner Product Formula
-			for Mp(2<var>n</var>)
-			and O(2<var>n</var> + 1),
-			University of Minnesota, Minneapolis, MN, USA, Oct. 7, 2011</li>
-		    <li>Moduli space of virtual Abelian varieties, Yale University, New Haven, CT, USA, Jan. 25, 2011</li>
-		</ul>
+		    <h2 id="sec-talks">Talks</h2>
+		    <ul>
+			<li>Period Integrals, <var>L</var>-functions
+			    and (<var>χ</var>, <var>b</var>)-theory,
+			    Hunan University,
+			    Changsha, China, May TBA, 2017
+			</li>
+			<li>Period Integrals, <var>L</var>-functions
+			    and (<var>χ</var>, <var>b</var>)-theory,
+			    National University of Singapore,
+			    Singapore, Apr. 16 - 22, 2017
+			</li>
+			<li>Period Integrals, <var>L</var>-functions
+			    and (<var>χ</var>, <var>b</var>)-theory,
+			    Xiamen University,
+			    Xiamen, China, Mar. 7 - 10, 2017
+			</li>
+			<li>Theta Correspondence, Periods
+			    and (<var>χ</var>, <var>b</var>)-theory, Zhejiang University,
+			    Hangzhou, China, Sept. 11, 2016
+			</li>
+			<li>Periods
+			    and (<var>χ</var>, <var>b</var>)-theory, Taida Institute for
+			    Mathematical Sciences, Taipei, China, Aug. 2, 2016
+			</li>
+			<li>Weil Conjectures for Abelian Varieties, Taida Institute for
+			    Mathematical Sciences, Taipei, China, July 19 and July 26, 2016</li>
+			<li>Involutive Property of Theta Correspondence, Shanghai Center for
+			    Mathematical Sciences, Shanghai, China, April. 1, 2016</li>
+			<li>Theta correspondence, periods and Arthur Parameters, Conference on
+			    Eisenstein Series on Kac-Moody Groups and Applications to Physics at
+			    KIAS, Seoul, South Korea, Nov. 16, 2015</li>
+			<li>Local Jacquet-Langlands Correspondence, Shanghai Center for
+			    Mathematical Sciences, Shanghai, China, Sept. 22, 2015</li>
+			<li>Theta correspondence, periods
+			    and <var>L</var>-functions, Morningside Center
+			    of Mathematics, Beijing, China, July 17 and July 19, 2015</li>
+			<li>Theta correspondence, periods and Arthur Parameters, University of
+			    Missouri, Columbia, MO, USA, Apr. 21, 2015</li>
+			<li>Theta correspondence, periods
+			    and <var>L</var>-functions, Part III,
+			    University of Minnesota, Minneapolis, MN, USA, Feb. 27, 2015</li>
+			<li>Theta correspondence, periods
+			    and <var>L</var>-functions, Part II,
+			    University of Minnesota, Minneapolis, MN, USA, Feb. 13, 2015</li>
+			<li>Theta correspondence, periods
+			    and <var>L</var>-functions, Part I, University
+			    of Minnesota, Minneapolis, MN, USA, Feb. 6, 2015</li>
+			<li>Some applications of the Arthur trucation method, University of
+			    Minnesota, Minneapolis, MN, USA, Nov. 14, 2014</li>
+			<li>Periods
+			    and (<var>χ</var>, <var>b</var>)-factors
+			    of cuspidal automorphic forms of symplectic groups, University of
+			    Minnesota, Minneapolis, MN, USA, Nov. 7, 2014</li>
+			<li>On Gan-Gross-Prasad Conjecture, University of Minnesota, Minneapolis, MN, USA, Nov. 1
+			    and Nov. 8, 2013</li>
+			<li>Virtual Abelian Varieties
+			    of GL<sub>2</sub>-type,
+			    Max-Planck-Institut für Mathematik, Bonn, Germany, Dec. 6, 2012</li>
+			<li>Rallis Inner Product Formula, University of Wisconsin-Madison, Madison, WI, USA,
+			    Apr. 12 2012</li>
+			<li>Theta correspondence for unitary groups, University of Minnesota, Minneapolis, MN, USA, 
+			    Jan. 27, Feb. 3, Mar. 2 and Mar. 23, 2012</li>
+			<li>Rallis Inner Product Formula
+			    for Mp(2<var>n</var>)
+			    and O(2<var>n</var> + 1),
+			    University of Minnesota, Minneapolis, MN, USA, Oct. 7, 2011</li>
+			<li>Moduli space of virtual Abelian varieties, Yale University, New Haven, CT, USA, Jan. 25, 2011</li>
+		    </ul>
 
-		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
-		<ul>
-		    <li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Dates TBA</li>
-		    <li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
-		    <li>Workshop on Lie Group Representations and Automorphic Forms at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
-		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
-		    <li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
-		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
-		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
-		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
-		    <li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <var>L</var>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
-		    <li><a href="http://home.kias.re.kr/MKG/h/EKM2015/">Eisenstein Series on Kac-Moody Groups and Application to Physics</a>, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
-		    <li><a href="http://2015wnt.csp.escience.cn/dct/page/65580">Workshop on Number Theory</a>, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
-		    <li>Past events are omitted.</li>
-		</ul>
+		    <h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
+		    <ul>
+			<li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Dates TBA</li>
+			<li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
+			<li>Workshop on Lie Group Representations and Automorphic Forms at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
+			<li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
+			<li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
+			<li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
+			<li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
+			<li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
+			<li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <var>L</var>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
+			<li><a href="http://home.kias.re.kr/MKG/h/EKM2015/">Eisenstein Series on Kac-Moody Groups and Application to Physics</a>, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
+			<li><a href="http://2015wnt.csp.escience.cn/dct/page/65580">Workshop on Number Theory</a>, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
+			<li>Past events are omitted.</li>
+		    </ul>
 
-		<h2 id="sec-employment">Employment and Visiting Positions</h2>
-		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, Sept. 2015 - present</li>
-		    <li>Dunham Jackson Assistance Professor, University of Minnesota, Aug. 29, 2011 - May 24, 2015, mainly working with Professor <a href= "http://www.math.umn.edu/~jiang034/">Dihua Jiang (江迪华)</a>.</li>
-		    <li>Visiting Max-Planck Institute for Mathematics, Sept. 1, 2012 - Aug.
-			31, 2013</li>
-		</ul>
+		    <h2 id="sec-employment">Employment and Visiting Positions</h2>
+		    <ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, Sept. 2015 - present</li>
+			<li>Dunham Jackson Assistance Professor, University of Minnesota, Aug. 29, 2011 - May 24, 2015, mainly working with Professor <a href= "http://www.math.umn.edu/~jiang034/">Dihua Jiang (江迪华)</a>.</li>
+			<li>Visiting Max-Planck Institute for Mathematics, Sept. 1, 2012 - Aug.
+			    31, 2013</li>
+		    </ul>
 
-		<h2 id="sec-education">Education</h2>
-		<ul class= "plain"><li>Ph.D. Mathematics, Columbia University, 2006–2011, Thesis Advisor:
-		    Professor <a href="https://web.math.princeton.edu/~shouwu/">Shou-Wu Zhang (张寿武)</a>;</li>
-		    <li>B.S. Mathematics, Fudan (复旦) University, 2002–2006.</li>
-		</ul>
+		    <h2 id="sec-education">Education</h2>
+		    <ul class= "plain"><li>Ph.D. Mathematics, Columbia University, 2006–2011, Thesis Advisor:
+			Professor <a href="https://web.math.princeton.edu/~shouwu/">Shou-Wu Zhang (张寿武)</a>;</li>
+			<li>B.S. Mathematics, Fudan (复旦) University, 2002–2006.</li>
+		    </ul>
 	    </div>
 	</div>
     </body>
