added link to Singapore workshop

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<li>Period Integrals, <var>L</var>-functions
 			    and (<var>χ</var>, <var>b</var>)-theory,
 			    National University of Singapore,
-			    Singapore, Apr. 16 - 22, 2017
+			    Singapore, Apr. 19, 2017
 			</li>
 			<li>Period Integrals, <var>L</var>-functions
 			    and (<var>χ</var>, <var>b</var>)-theory,
@@ -190,6 +190,7 @@
 			<li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
 			<li>Workshop on Lie Group Representations and Automorphic Forms at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
 			<li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
+			<li><a href="http://ww1.math.nus.edu.sg/events/Representation%20Theory%20and%20Number%20Theory%20workshop-2017.pdf">Representation Theory and Number Theory Workshop</a>, National University of Singapore, Singapore, Apr. 17 - 20, 2017</li>
 			<li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
 			<li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
 			<li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
