--- a/latex-challenges.html
+++ b/latex-challenges.html
@@ -25,7 +25,7 @@
 	    <div class="main">
 		<ul>
 		    <li>Typeset '(๑•̀ㅂ•́)و✧' in LaTeX. <br/>
-			This emoticon involes Thai, Japanese, Korean, Arabic... (╯°□°)╯︵ ┻━┻ </li>
+			This emoticon involves Thai, Japanese, Korean, Arabic... (╯°□°)╯︵ ┻━┻ </li>
 		</ul>
 	    </div>
 	    <div class="footer">
