updated talk schedules. added latex stuff

--- a/latex-challenges.html
+++ b/latex-challenges.html
@@ -25,7 +25,9 @@
 	    <div class="main">
 		<ul>
 		    <li>Typeset '(๑•̀ㅂ•́)و✧' in LaTeX. <br/>
-			This emoticon involves Thai, Japanese, Korean, Arabic... (╯°□°)╯︵ ┻━┻ </li>
+			This emoticon involves Thai, Chinese, Japanese, Korean, Arabic... (╯°□°)╯︵ ┻━┻ <br/>
+			Challenge accepted! <a href="https://github.com/cywu/latex-test/blob/master/emoji-test.pdf">pdf »</a> <a href="https://github.com/cywu/latex-test/blob/master/emoji-test.tex">tex »</a>
+		    </li>
 		</ul>
 	    </div>
 	    <div class="footer">
