updated talk/conference schedules

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
 
 		<h2 id="sec-talks">Talks</h2>
 		<ul>
+		    <li>Period Integrals, <var>L</var>-functions
+			and (<var>χ</var>, <var>b</var>)-theory,
+			Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8 (tentative), 2017
+		    </li>
 		    <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, June 8th, 2017
 		    </li>
 		    <li>Period Integrals, <var>L</var>-functions
@@ -127,7 +131,7 @@
 		    <li>Period Integrals, <var>L</var>-functions
 			and (<var>χ</var>, <var>b</var>)-theory,
 			Xiamen University,
-			Xiamen, China, Mar. 7 - 10, 2017
+			Xiamen, China, Mar. 8, 2017
 		    </li>
 		    <li>Theta Correspondence, Periods
 			and (<var>χ</var>, <var>b</var>)-theory, Zhejiang University,
@@ -184,9 +188,9 @@
 
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
-		    <li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Dates TBA</li>
-		    <li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
-		    <li>Workshop on Lie Group Representations and Automorphic Forms at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
+		    <li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Sept., 2017 - Jan. 2018 (tentative)</li>
+		    <li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July 10 - 12, 2017</li>
+		    <li><a href="http://bicmr.pku.edu.cn/meeting-22?catid=KiQhKyYs">Workshop on Lie Group Representations and Automorphic Forms</a>, Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
 		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
 		    <li><a href="http://ww1.math.nus.edu.sg/events/Representation%20Theory%20and%20Number%20Theory%20workshop-2017.pdf">Representation Theory and Number Theory Workshop</a>, National University of Singapore, Singapore, Apr. 17 - 20, 2017</li>
 		    <li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
