--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<div class="submenu overlay-item">
 		    <div class="submenu-up">
 			<div class="menu-item flex-col align-center"><a href="#sec-top">Personal Information</a></div>
-			<div class="menu-item flex-col align-center"><a href="#sec-teaching">Teaching & Seminars</a></div>
+			<div class="menu-item flex-col align-center"><a href="#sec-teaching">Teaching</a></div>
+            <div class="menu-item flex-col align-center"><a href="#sec-workshops-seminars">Workshops & Seminars</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-research">Research & Publication</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-talks">Talks</a></div>
 			<div class="menu-item flex-col align-center"><a href="#sec-conferences">Conferences</a></div>
@@ -87,10 +88,9 @@
 			Algebra</a></li>
 		</ul>
 
-		<h2 id="sec-seminars">Seminars</h2>
+		<h2 id="sec-workshops-seminars">Seminars and Workshops</h2>
 		<ul><li>
-		    Spring 2012 <a href="http://math.umn.edu/%7Edhjiang/Smnr/lie.html">Lie Theory
-		    Seminar</a></li>
+		    July 10 - 12, 2017, <a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>.</li>
 		</ul>
 
 		<h2 id="sec-research">Reseach</h2>
