minor format adjustment

--- a/conference/2017-number-theory.html
+++ b/conference/2017-number-theory.html
@@ -46,8 +46,8 @@
                 <div class="standout">
                     <h2> Hotel:</h2>
                     <div class="flex-row">
-                        <div class="flex-item">Fortune Hotel, 399 Handan Rd, <br/>Yangpu District, <br/>Shanghai, China, 200433, <br/>Phone: +86 21 6511 0000</div>
-                        <div class="flex-item">财富大酒店，上海杨浦区邯郸路399号<br/>电话：+86 21 6511 0000</div>
+                        <div class="flex-item">Fortune Hotel, <br/>399 Handan Rd, <br/>Yangpu District, <br/>Shanghai, China, 200433, <br/>Phone: +86 21 6511 0000</div>
+                        <div class="flex-item">财富大酒店，<br/>上海杨浦区邯郸路399号<br/>电话：+86 21 6511 0000</div>
                     </div>
                 </div>
             </div>
