added more detailed location info

--- a/conference/2017-number-theory.html
+++ b/conference/2017-number-theory.html
@@ -26,8 +26,11 @@
                     <h2>Information:</h2>
 		            <div>
                         <b>Date:</b> July. 10 - 12, 2017<br/>
-			            <b>Location:</b> <br/>Shanghai Center for Mathematical Sciences, <br/>Fudan University,<br/>
+			            <b>Location:</b> <br/>
+                        Shanghai Center for Mathematical Sciences,<br/>
+                        Fudan University,<br/>
                         Guanghua East Main Building, Room 2201<br/>
+                        220 Handan Rd., Shanghai, 200433, China<br/>
                         <b>Contact:</b> Chenyan Wu &lt;chywu "at" fudan.edu.cn&gt;
 			        </div>
 		        </div>
