updateed schedule for conference

--- a/conference/2017-number-theory.html
+++ b/conference/2017-number-theory.html
@@ -56,34 +56,60 @@
                         <div class="item-time">
                             09.30 - 10.30
                         </div>
-                        <div class="item-name">David Soudry
-                        </div>
-                        <div class="item-title">TBA</div>
-                        <div class="item-time">
-                            11.00 - 12.00
-                        </div>
                         <div class="item-name">Dihua Jiang
                         </div>
-                        <div class="item-title">TBA</div>
                         <div class="item-time">
-                            14.00 - 15.00
+                            13.30 - 14.30
                         </div>
                         <div class="item-name">Lei Zhang
                         </div>
-                        <div class="item-title">TBA</div>
+                        <div class="item-time">
+                            14.30 - 15.00
+                        </div>
+                        <div class="item-name">David Soudry
+                        </div>
+                        <div class="item-time">
+                            15.15 - 16.00
+                        </div>
+                        <div class="item-name">Dihua Jiang
+                        </div>
                         <div class="item-vertical-skip"></div>
                         <div class="item-date">
                             <h3>Tuesday, July 11</h3>
                         </div>
-                        <div class="item-date">
-                            09.30 - TBA
+                        <div class="item-time">
+                            09.30 - 10.30
+                        </div>
+                        <div class="item-name">
+                            Zhengyu Xiang
+                        </div>
+                        <div class="item-time">
+                            10.45 - 11.45
+                        </div>
+                        <div class="item-name">
+                            Bin Xu
+                        </div>
+                        <div class="item-time">
+                            14.00 - 15.00
+                        </div>
+                        <div class="item-name">
+                            Feng Su
                         </div>
                         <div class="item-date">
                             <h3>Wednesday, July 12</h3>
                         </div>
                         <div class="item-vertical-skip"></div>
-                        <div class="item-date">
-                            09.30 - TBA
+                        <div class="item-time">
+                            10.00 - 11.00
+                        </div>
+                        <div class="item-name">
+                            Zhiyuan Li
+                        </div>
+                        <div class="item-time">
+                            14.00 - 15.00
+                        </div>
+                        <div class="item-name">
+                            Chenyan Wu
                         </div>
                     </div>
                 </div>
