updated room info of conference

--- a/conference/2017-number-theory.html
+++ b/conference/2017-number-theory.html
@@ -95,6 +95,9 @@
                         <div class="item-name">
                             Feng Su
                         </div>
+                        <div class="item-title">
+                            note in room 2213.
+                        </div>
                         <div class="item-date">
                             <h3>Wednesday, July 12</h3>
                         </div>
