--- a/conference/2017-number-theory.html
+++ b/conference/2017-number-theory.html
@@ -39,7 +39,9 @@
 		            <div>
                         <ul>
                             <li>Dihua Jiang, University of Minnesota</li>
+                            <li>Zhiyuan Li, Fudan University</li>
                             <li>David Soudry, Tel Aviv University</li>
+                            <li>Feng Su, Chinese Academy of Sciences</li>
                             <li>Chenyan Wu, Fudan University</li>
                             <li>Zhengyu Xiang, Fudan University</li>
                             <li>Bin Xu, Sichuan University</li>
@@ -73,6 +75,11 @@
                         </div>
                         <div class="item-name">Dihua Jiang
                         </div>
+                        <div class="item-time">
+                            16.15 - 17.00
+                        </div>
+                        <div class="item-name">Bin Xu
+                        </div>
                         <div class="item-vertical-skip"></div>
                         <div class="item-date">
                             <h3>Tuesday, July 11</h3>
@@ -95,8 +102,8 @@
                         <div class="item-name">
                             Bin Xu
                         </div>
-                        <div class="item-title">
-                            note in room 2213.
+                        <div class="item-note">
+                            Note: in room 2213.
                         </div>
                         <div class="item-date">
                             <h3>Wednesday, July 12</h3>
@@ -107,6 +114,9 @@
                         </div>
                         <div class="item-name">
                             Zhiyuan Li
+                        </div>
+                        <div class="item-note">
+                            Note: in room 2213.
                         </div>
                         <div class="item-time">
                             14.00 - 15.00
