update schedules and removed 'tentative' from workshop schedule

--- a/conference/2017-number-theory.html
+++ b/conference/2017-number-theory.html
@@ -35,7 +35,7 @@
 			        </div>
 		        </div>
                 <div class="standout">
-                    <h2>Speakers (tentative):</h2>
+                    <h2>Speakers:</h2>
 		            <div>
                         <ul>
                             <li>Dihua Jiang, University of Minnesota</li>
@@ -50,7 +50,7 @@
 			        </div>
 		        </div>
                 <div class="standout">
-                    <h2>Schedule (tentative):</h2>
+                    <h2>Schedule:</h2>
                     <div class="grid-container conference-schedule">
                         <div class="item-date">
                             <h3>Monday, July 10</h3>
@@ -114,9 +114,6 @@
                         </div>
                         <div class="item-name">
                             Zhiyuan Li
-                        </div>
-                        <div class="item-note">
-                            Note: in room 2213.
                         </div>
                         <div class="item-time">
                             14.00 - 15.00
