--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
 
 		<h2 id="sec-talks">Talks</h2>
 		<ul>
+            <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, July 12th, 2017
+		    </li>
 		    <li>Period Integrals, <var>L</var>-functions
 			and (<var>χ</var>, <var>b</var>)-theory,
-			Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8 (tentative), 2017
+			Beijing International Center for Mathematical Research, Beijing, China, July 3, 2017
 		    </li>
 		    <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, June 8th, 2017
 		    </li>
@@ -188,8 +190,7 @@
 
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
-		    <li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Sept., 2017 - Jan. 2018 (tentative)</li>
-		    <li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July 10 - 12, 2017</li>
+		    <li><a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>, Shanghai Center for Mathematical Sciences, Shanghai, China, July 10 - 12, 2017</li>
 		    <li><a href="http://bicmr.pku.edu.cn/meeting-22?catid=KiQhKyYs">Workshop on Lie Group Representations and Automorphic Forms</a>, Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
 		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
 		    <li><a href="http://ww1.math.nus.edu.sg/events/Representation%20Theory%20and%20Number%20Theory%20workshop-2017.pdf">Representation Theory and Number Theory Workshop</a>, National University of Singapore, Singapore, Apr. 17 - 20, 2017</li>
