--- a/index.html
+++ b/index.html
@@ -190,12 +190,15 @@
 
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
+            <li>Visiting Professor Shou-Wu Zhang (张寿武), Princeton University, Princeton, NJ, USA, Oct. 1 - Nov. 30, 2017</li>
+            <li>Morningside Center for Mathematics, Beijing, China, Aug. 17 - 25, 2017</li>
+            <li>Morningside Center for Mathematics, Beijing, China, Aug. 3 - 9, 2017</li>
 		    <li><a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>, Shanghai Center for Mathematical Sciences, Shanghai, China, July 10 - 12, 2017</li>
 		    <li><a href="http://bicmr.pku.edu.cn/meeting-22?catid=KiQhKyYs">Workshop on Lie Group Representations and Automorphic Forms</a>, Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
 		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
 		    <li><a href="http://ww1.math.nus.edu.sg/events/Representation%20Theory%20and%20Number%20Theory%20workshop-2017.pdf">Representation Theory and Number Theory Workshop</a>, National University of Singapore, Singapore, Apr. 17 - 20, 2017</li>
 		    <li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
-		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
+		    <li>Visiting Professor Dihua Jiang (江迪华), Zhejiang University, Hangzhou, China, Oct. 7 - 10, 2016</li>
 		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
 		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
 		    <li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <var>L</var>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
