--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
             <li>Visiting Professor Shou-Wu Zhang (张寿武), Princeton University, Princeton, NJ, USA, Oct. 1 - Nov. 30, 2017</li>
+            <li><a href="http://www.mcm.ac.cn/activities/programs/svrt2017/201707/t20170713_378055.html">Summer School on Shimura Varieties and Related Topics</a>, Morningside Center for Mathematics, Beijing, China, Sept. 11 - 22, 2017</li>
             <li>Morningside Center for Mathematics, Beijing, China, Aug. 17 - 25, 2017</li>
             <li>Morningside Center for Mathematics, Beijing, China, Aug. 3 - 9, 2017</li>
 		    <li><a href="conference/2017-number-theory.html">Workshop on Automorphic Forms and Automorphic Representations</a>, Shanghai Center for Mathematical Sciences, Shanghai, China, July 10 - 12, 2017</li>
