--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 	</div>
 	<div  id="sec-top" class= "page">
 	    <div class="header">
-		<h1>Chenyan Wu (吴晨彦)</h1>
+		    <h1>Chenyan Wu (吴晨彦)</h1>
+            <p><a href="https://orcid.org/0000-0002-5896-0122" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-5896-0122</a></p>
 		<p>Young Investigator at Shanghai Center for Mathematical
 		    Sciences<br/><a href="https://cywu.github.io/">https://cywu.github.io/</a></p>
 	    </div>
