update talk schedule

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
 
 		<h2 id="sec-talks">Talks</h2>
 		<ul>
+            <li>Moduli spaces of virtual Abelian varieties, University of Melbourne, Parkville, Australia, Jan. 4, 2018
+            <li>Theta correspondence, period integrals and Arthur parameters,
+			    Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 17, 2017
+		    </li>
             <li>Virtual Abelian Varieties of GL(2)-type, Fudan University, Shanghai, China, July 12th, 2017
 		    </li>
 		    <li>Period Integrals, <var>L</var>-functions
@@ -190,6 +194,8 @@
 
 		<h2 id="sec-conferences">Conferences, Workshops and Short Visits</h2>
 		<ul>
+            <li><a href="http://www.scms.fudan.edu.cn/Data/View/1000.html">2017 - 2018 Young Mathematician Forum</a>, Fudan University, Shanghai, China, Dec. 17 - 19, 2017</li>
+            <li><a href="http://www.wias.org.cn/chinese-detail-371-8679.html">Number Theory Seminar</a>, Westlake Institute for Advanced Studies, Hangzhou, China, Dec. 16 - 17, 2017</li>
             <li>Visiting Professor Shou-Wu Zhang (张寿武), Princeton University, Princeton, NJ, USA, Oct. 1 - Nov. 30, 2017</li>
             <li><a href="http://www.mcm.ac.cn/activities/programs/svrt2017/201707/t20170713_378055.html">Summer School on Shimura Varieties and Related Topics</a>, Morningside Center for Mathematics, Beijing, China, Sept. 11 - 22, 2017</li>
             <li>Morningside Center for Mathematics, Beijing, China, Aug. 17 - 25, 2017</li>
